# Tilezu

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: no-cursor-coauthor.mdc
.githooks/: commit-msg
docs/: DEVELOPMENT.md  RELEASE.md
scripts/: build-debug-app.ps1  build-release-app.ps1  check-dist-js-syntax.js  clean-build-caches.ps1  copy-debug-app.ps1  insert-systems-memo.py  perf-reset.ps1  perf-summary.ps1  print-boot-perf-log.ps1  release-artifact-report.ps1  run-app.ps1  sync-app-artifact.ps1  trim-rust-target.ps1  utf8-add-games.mjs
src/: App.css  App.tsx  ErrorBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  run-app.ps1  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/launcher/: game_launcher.rs  launcher_manager.rs  mod.rs
src-tauri/src/media/: media_controls.rs  mod.rs
src-tauri/src/scanners/: battle_net_scanner.rs  emulator_scanner.rs  epic_scanner.rs  mod.rs  registry_scanner.rs  rom_import_scanner.rs  rom_scanner.rs  screenshot_scanner.rs  steam_scanner.rs  windows_special_scanner.rs
src-tauri/src/services/: cover_art_service.rs  mod.rs  retroachievements_service.rs  retroarch_core_service.rs  steam_service.rs
src-tauri/src/utils/: mod.rs  path_utils.rs  windows_process.rs
src/components/: AchievementModal.tsx  KeychainGalleryModal.tsx  PlaytimeModal.tsx  ProfileRailIcons.tsx  Sidebar.tsx  SignatureRungoPreview.tsx  TopBar.tsx  (+1 more)
(+343 files in other folders)
