[package]
name = "app"
version = "0.1.0"
description = "Tilezu — personal game launcher for Windows"
authors = ["Mason"]
license = "MIT"
repository = "https://github.com/maywok/Tilezu"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
# Smaller target/ folder on Windows (skips per-crate PDBs). app.exe behavior is unchanged.
debug = 0

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
windows = { version = "0.58", features = ["Foundation", "Media_Control", "Storage_Streams", "Win32_Foundation", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
zip = "2.2"
tauri-plugin-prevent-default = { version = "5.0.0", features = ["platform-windows"] }
